--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,14 @@
     <string name="search">Поиск</string>
     <string name="mediateka">Медиатека</string>
     <string name="settings">Настройки</string>
+
+
     <string name="Dark_Mode">Темная тема</string>
     <string name="Share">Поделиться приложением</string>
     <string name="Support">Написать в поддержку</string>
     <string name="user_Argeement">Пользовательское соглашение</string>
+    <string name="ShareAppText">Привет! Попробуй это приложение:\nhttps://practicum.yandex.ru/android-developer/?from=catalog</string>
+    <string name="SupportTextHeader">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="SupportTextBody">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="Offer">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
