--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="bad_connection">Проблема со связью</string>
     <string name="load_failed">Загрузка не удалась. Проверьте подключерние к интернету</string>
     <string name="refresh">Обновить</string>
+    <string name="you_searched">Вы искали</string>
+    <string name="clear_history">Очистить историю</string>
+
 
 
     <string name="search_hint">Поиск</string>
