--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="playlists_are_empty">Вы не создали\n ни одного плейлиста</string>
     <string name="new_playlist">Новый плейлист</string>
 
+    <string name="favorite_tracks">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
+
 
     <string name="search_hint">Поиск</string>
 
