bottom sheet element in player fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="favorite_tracks">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
     <string name="create_playlist_dialog_hint">Плейлист уже существует. Создать копию?</string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
 
     <string name="search_hint">Поиск</string>
 
