--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
 
     <string name="favorite_tracks">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
+    <string name="playlistTracklist">Список треков</string>
     <string name="create_playlist_dialog_hint">Плейлист уже существует. Создать копию?</string>
     <string name="add_to_playlist">Добавить в плейлист</string>
 
