--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,13 @@
     <string name="playlists">Плейлисты</string>
     <string name="playlistTracklist">Список треков</string>
     <string name="create_playlist_dialog_hint">Плейлист уже существует. Создать копию?</string>
-    <string name="is_playlistfinished_dialog_hint">Завершить создание плейлиста? Все несохраненные данные будут потеряны</string>
+    <string name="is_playlistfinished_dialog_hint">Завершить создание плейлиста?</string>
+    <string name="data_will_be_lost_hint">Все несохраненные данные будут потеряны</string>
+
+    <string name="finish_editing">Завершить</string>
+    <string name="cancel">Отмена</string>
+
+
     <string name="add_to_playlist">Добавить в плейлист</string>
 
     <string name="search_hint">Поиск</string>
