edit playlistscreen in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="you_searched">Вы искали</string>
     <string name="clear_history">Очистить историю</string>
     <string name="create_playlist">Создать</string>
+    <string name="save_edited_playlist">Сохранить</string>
+    <string name="edit_playlist">Редактировать</string>
 
     <string name="library_is_empty">Ваша медиатека пуста</string>
     <string name="playlists_are_empty">Вы не создали\n ни одного плейлиста</string>
