--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,16 @@
     <string name="create_playlist_dialog_hint">Плейлист уже существует. Создать копию?</string>
     <string name="is_playlistfinished_dialog_hint">Завершить создание плейлиста?</string>
     <string name="data_will_be_lost_hint">Все несохраненные данные будут потеряны</string>
+    <string name="delete_track_from_playlist">Удалить трек</string>
+    <string name="check_deletion_intent">Вы уверены, что хотите удалить трек из плейлиста?</string>
+
+    <string name="delete_playlist">Удалить плейлист</string>
+    <string name="check_playlist_deletion_intent">Вы уверены, что хотите удалить плейлист?</string>
+
 
     <string name="finish_editing">Завершить</string>
     <string name="cancel">Отмена</string>
+    <string name="confirm_deletion">Удалить</string>
 
 
     <string name="add_to_playlist">Добавить в плейлист</string>
